--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
+    "mysql2": "^3.15.3",
     "node-cron": "^3.0.3",
     "path": "^0.12.7",
     "pg": "^8.13.1",
