--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
       - NODE_ENV=development
       - APP_STATE=dev
       - PORT=3000
+      - UPLOAD_STATE=liara
     volumes:
       - './upload:/app/public/upload'
     depends_on:
