--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,8 @@ services:
     volumes:
       - './upload:/app/public/upload'
     depends_on:
-      - db
+      db:
+        condition: service_healthy
 
   db:
     image: mysql:8
